v3.4.9 (XXXX-XX-XX)
-------------------

* Fix installation of arangoinspect and libraries in Windows client installer.

* Fixed issue #10867: arangod based binaries lack product version info and icon
  on Windows.

* Now clearing an internal map inside the traverser engine correctly.

* Fix Windows client package JS installation paths.

* Updated arangosync to 0.7.2.

* Fixed internal issue #656: While executing large amount of concurrent
  insert/removes iresearch seems to leak open file handles. This results in
  error 32 in cleanup (observed only on Windows as Linux doesn`t have file
  sharing locks).

* Fixed issue #10725: Wrong document count shown inside an empty collection in
  the web UI.

* Fixed internal issue #4748: Editing a single edgeDefinition using the graph
  API failed if it was not shared between all available graphs.

* Fixed a bug in smart graph bfs traversals that might violate path uniqueness
  requirements in rare cases.

* Bugfix: An AQL ternary expression with the condition being true at query
  compile time would not execute its false branch.

* Fixed GET _api/gharial to also include the name property in every returned graph.
  This is a consistency fix within the API as all other APIs include the name.
  As a work around the returned _key can be used, which is identical to the name.

* Fixed permissions for dump/restore.

* Allow the optimizer to use indexes when a collection attribute is compared to an
  expansion followed by an attribute name, e.g. `doc.value IN something[*].name`.

* Fixed issue #10440: Incorrect sorting with sort criteria partially covered 
  by index.

* Fixed UPSERT matching.

  Empty objects in the `UPSERT { ... }` expression will not be omitted anymore:

      db._collection("col").insert({ "find" : "me" });
      db._query(` UPSERT { "find" : "me", "foo" : {} }
                  UPDATE { "foo"  : "not gonna happen" }
                  INSERT { "find" : "me", "foo"  : {} }
                  INTO col
      `)
